--- a/style.css
+++ b/style.css
@@ -568,6 +568,6 @@ section[role="region"] {
 
 @media (max-width: 600px) {
   section[role="region"] {
-    scroll-margin-top: 110px;
+    scroll-margin-top: 130px; /* was 110px */
   }
 }
